--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-player": "^2.15.1",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
