--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.3.0",
+    "github-markdown-css": "^5.5.1",
     "lucide-react": "^0.378.0",
     "next": "14.1.4",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.15.1",
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
