--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.0",
     "flowbite": "^2.3.0",
     "github-markdown-css": "^5.5.1",
     "lucide-react": "^0.378.0",
@@ -25,8 +26,10 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-player": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.13.8",
     "react-youtube": "^10.1.0",
+    "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "tailwind-merge": "^2.3.0",
